auto(review): apply fixes across budget/data, budget/ui, task/application, task/domain, and layout resources
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>